# hexagonal-bazel

./: .bazelrc  .editorconfig  .gitignore  BUILD  Makefile  README.md  WORKSPACE  buf.gen.yaml  buf.work.yaml  go.mod  go.sum  go_repositories.bzl  tools.go
api/system/errors/v1/: BUILD.bazel  error.pb.go
api/system/events/v1/: BUILD.bazel  event.pb.go
api/urlshortener/v1/: BUILD.bazel  entity.pb.go  service.pb.go  service_grpc.pb.go
api/urlshortener/v1/urlshortenerv1connect/: BUILD.bazel  service.connect.go
application/urlshortener/v1/: BUILD.bazel  create_link.go  mappers.go  resolve_link.go
cmd/urlshortener-analyzer/: BUILD.bazel  main.go
cmd/urlshortener-api/: BUILD.bazel  main.go
cmd/urlshortener-api/router/: BUILD.bazel  create_link.go  helpers.go  home.go  not_found.go  resolve_link.go
cmd/urlshortener-api/static/: error.html  index.html
cmd/urlshortener-datastore/: BUILD.bazel  main.go
cmd/urlshortener-datastore/actor/: BUILD.bazel  actor.go  api.go  config.go
cmd/urlshortener-datastore/actor/server/: BUILD.bazel  grpc.go
cmd/urlshortener-datastore/server/: BUILD.bazel  grpc.go
cmd/urlshortener-graphql/: BUILD.bazel  gqlgen.yml  server.go
cmd/urlshortener-graphql/graph/: BUILD.bazel  resolver.go  schema.graphqls  schema.resolvers.go
cmd/urlshortener-graphql/graph/model/: BUILD.bazel  models_gen.go
cmd/urlshortener-syncer/: BUILD.bazel  main.go
domain/urlshortener/link/: BUILD.bazel  api.go  create_link.go  domain.go  events.go  resolve_link.go
infrastructure/broker/: BUILD.bazel  api.go  console.go  jetstream.go  noop.go
infrastructure/clock/: BUILD.bazel  frozen.go  real.go
infrastructure/datastore/badger/: BUILD.bazel  link.go
infrastructure/datastore/influxdb/: BUILD.bazel  link.go
infrastructure/generator/: BUILD.bazel  api.go
infrastructure/generator/passphrase/: BUILD.bazel  passphrase.go
infrastructure/generator/shortid/: BUILD.bazel  shortid.go
infrastructure/reactor/: BUILD.bazel  after.go  api.go  before.go
infrastructure/security/password/: BUILD.bazel  api.go  argon2.go  argon2_test.go  identity.go
infrastructure/serr/: BUILD.bazel  api.go  default_builder.go  predefined.go
pkg/eventbus/: BUILD.bazel  api.go
pkg/reactor/: BUILD.bazel
pkg/serr/: BUILD.bazel  api.go
pkg/types/: BUILD.bazel  nil.go  nil_test.go  pointers.go  string_array.go
proto/system/errors/v1/: error.proto
proto/system/events/v1/: event.proto
proto/urlshortener/v1/: BUILD.bazel  entity.proto  service.proto
