load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "urlshortener-api_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "static/error.html",
        "static/index.html",
    ],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-api",
    visibility = ["//visibility:private"],
    deps = [
        "//api/urlshortener/v1:urlshortener",
        "//cmd/urlshortener-api/router",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "urlshortener-api",
    embed = [":urlshortener-api_lib"],
    visibility = ["//visibility:public"],
)
