load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "urlshortener-datastore_lib",
    srcs = ["main.go"],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-datastore",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/urlshortener-datastore/actor",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "urlshortener-datastore",
    embed = [":urlshortener-datastore_lib"],
    visibility = ["//visibility:public"],
)
