load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "urlshortener-graphql_lib",
    srcs = ["server.go"],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-graphql",
    visibility = ["//visibility:private"],
    deps = [
        "//api/urlshortener/v1:urlshortener",
        "//cmd/urlshortener-graphql/graph",
        "//cmd/urlshortener-graphql/graph/generated",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/playground",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "urlshortener-graphql",
    embed = [":urlshortener-graphql_lib"],
    visibility = ["//visibility:public"],
)
