load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "urlshortener-syncer_lib",
    srcs = ["main.go"],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-syncer",
    visibility = ["//visibility:private"],
    deps = [
        "//api/system/events/v1:events",
        "//api/urlshortener/v1:urlshortener",
        "@com_github_nats_io_nats_go//:nats_go",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "urlshortener-syncer",
    embed = [":urlshortener-syncer_lib"],
    visibility = ["//visibility:public"],
)
