load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "urlshortener",
    srcs = [
        "create_link.go",
        "mappers.go",
        "resolve_link.go",
    ],
    importpath = "zntr.io/hexagonal-bazel/application/urlshortener/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//api/urlshortener/v1:urlshortener",
        "//domain/urlshortener/link",
        "//infrastructure/clock",
        "//infrastructure/generator",
        "//infrastructure/generator/passphrase",
        "//infrastructure/reactor",
        "//infrastructure/security/password",
        "//infrastructure/serr",
        "//pkg/types",
        "@com_github_go_ozzo_ozzo_validation_v4//:ozzo-validation",
        "@com_github_go_ozzo_ozzo_validation_v4//is",
        "@com_github_gosimple_slug//:slug",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
