load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = [
        "create_link.go",
        "helpers.go",
        "home.go",
        "not_found.go",
        "resolve_link.go",
    ],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-api/router",
    visibility = ["//visibility:public"],
    deps = [
        "//api/system/errors/v1:errors",
        "//api/urlshortener/v1:urlshortener",
        "//infrastructure/serr",
        "//pkg/types",
        "@com_github_go_chi_chi_v5//:chi",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
