load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["grpc.go"],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-datastore/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/urlshortener/v1:urlshortener",
        "//domain/urlshortener/link",
        "//infrastructure/generator",
        "//infrastructure/security/password",
        "//pkg/eventbus",
    ],
)
