load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "link",
    srcs = [
        "api.go",
        "create_link.go",
        "domain.go",
        "events.go",
        "resolve_link.go",
    ],
    importpath = "zntr.io/hexagonal-bazel/domain/urlshortener/link",
    visibility = ["//visibility:public"],
    deps = [
        "//api/system/errors/v1:errors",
        "//api/system/events/v1:events",
        "//api/urlshortener/v1:urlshortener",
        "//pkg/eventbus",
        "//pkg/reactor",
        "@com_github_go_ozzo_ozzo_validation_v4//:ozzo-validation",
        "@com_github_go_ozzo_ozzo_validation_v4//is",
        "@com_github_gowebprod_uuid7//:uuid7",
        "@com_github_teris_io_shortid//:shortid",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
