load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "link",
    srcs = [
        "api.go",
        "create_link.go",
        "domain.go",
        "events.go",
        "resolve_link.go",
    ],
    importpath = "zntr.io/hexagonal-bazel/domain/urlshortener/link",
    visibility = ["//visibility:public"],
    deps = [
        "//api/system/errors/v1:errors",
        "//api/system/events/v1:events",
        "//api/urlshortener/v1:urlshortener",
        "//infrastructure/generator",
        "//infrastructure/security/password",
        "//pkg/eventbus",
        "//pkg/reactor",
        "//pkg/types",
        "@com_github_go_ozzo_ozzo_validation_v4//:ozzo-validation",
        "@com_github_go_ozzo_ozzo_validation_v4//is",
        "@com_github_gowebprod_uuid7//:uuid7",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
