load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "link",
    srcs = [
        "api.go",
        "domain.go",
        "events.go",
    ],
    importpath = "zntr.io/hexagonal-bazel/domain/urlshortener/link",
    visibility = ["//visibility:public"],
    deps = [
        "//api/system/events/v1:events",
        "//api/urlshortener/v1:urlshortener",
        "@com_github_gowebprod_uuid7//:uuid7",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
