load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "influxdb",
    srcs = ["link.go"],
    importpath = "zntr.io/hexagonal-bazel/infrastructure/datastore/influxdb",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/urlshortener/link",
        "@com_github_influxdata_influxdb//client/v2:client",
    ],
)
