load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "passphrase",
    srcs = ["passphrase.go"],
    importpath = "zntr.io/hexagonal-bazel/infrastructure/generator/passphrase",
    visibility = ["//visibility:public"],
    deps = [
        "//infrastructure/generator",
        "@com_github_sethvargo_go_diceware//diceware",
    ],
)
