load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "shortid",
    srcs = ["shortid.go"],
    importpath = "zntr.io/hexagonal-bazel/infrastructure/generator/shortid",
    visibility = ["//visibility:public"],
    deps = [
        "//infrastructure/generator",
        "@com_github_teris_io_shortid//:shortid",
    ],
)
