load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["grpc.go"],
    importpath = "zntr.io/hexagonal-bazel/cmd/urlshortener-datastore/actor/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/urlshortener/v1:urlshortener",
        "//application/urlshortener/v1:urlshortener",
        "//domain/urlshortener/link",
        "//infrastructure/clock",
        "//infrastructure/generator",
        "//infrastructure/generator/passphrase",
        "//infrastructure/security/password",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
